--- a/jp/logistic-regression-3.qmd
+++ b/jp/logistic-regression-3.qmd
@@ -280,7 +280,7 @@ $$g(1−\pi)=−g(\pi)$$
 お父さん「この4つの条件を満たす滑らかな関数は、実はほとんどひとつしかない」
 :::
 
-$$g(\pi)=\log \left(\frac{\pi_i}{1-\pi_i}\right)$$
+$$g(\pi)=\log \left(\frac{\pi}{1-\pi}\right)$$
 
 ::: voice-daughter
 私「それがロジット関数ってことか。データを人工的に変換しても解析結果が変わらないってこと？」
